whitespace fix

--- a/game/css/main.css
+++ b/game/css/main.css
@@ -735,6 +735,7 @@ h1, h2, h3, h4, h5, h6 {
     text-align: right;
     margin: 5px 0 0 0;
     vertical-align: middle;
+    white-space: nowrap;
 }
 
 .feed-item-hover{
